---
source: src/lib.rs
expression: "NetflowParser::default().parse_bytes(&packet)"
---
- V9:
    header:
      version: 9
      count: 2
      sys_up_time: 2313
      unix_secs: 66051
      unix_time:
        secs_since_epoch: 66051
        nanos_since_epoch: 0
      sequence_number: 1
      source_id: 1
    flowsets:
      - flow_set_id: 0
        template:
          length: 16
          template_id: 258
          field_count: 2
          fields:
            - field_type: 1
              field_length: 4
            - field_type: 8
              field_length: 4
        data: ~
      - flow_set_id: 258
        template: ~
        data:
          length: 12
          data_fields:
            - in_bytes:
                - 9
                - 2
                - 3
                - 4
              in_pkts: ~
              flows: ~
              protocol: ~
              src_tos: ~
              tcp_flags: ~
              l4_src_port: ~
              ipv4_src_addr: ~
              src_mask: ~
              input_snmp: ~
              l4_dst_port: ~
              ipv4_dst_addr: ~
              dst_mask: ~
              output_snmp: ~
              ipv4_next_hop: ~
              src_as: ~
              dst_as: ~
              bgp_ipv4_next_hop: ~
              mul_dst_pkts: ~
              mul_dst_bytes: ~
              last_switched: ~
              first_switched: ~
              out_bytes: ~
              out_pkts: ~
              min_pkt_lngth: ~
              max_pkt_lngth: ~
              ipv6_src_addr: ~
              ipv6_dist_addr: ~
              ipv6_src_mask: ~
              ipv6_dst_mask: ~
              ipv6_flow_label: ~
              icmp_type: ~
            - in_bytes: ~
              in_pkts: ~
              flows: ~
              protocol: ~
              src_tos: ~
              tcp_flags: ~
              l4_src_port: ~
              ipv4_src_addr: 9.9.9.8
              src_mask: ~
              input_snmp: ~
              l4_dst_port: ~
              ipv4_dst_addr: ~
              dst_mask: ~
              output_snmp: ~
              ipv4_next_hop: ~
              src_as: ~
              dst_as: ~
              bgp_ipv4_next_hop: ~
              mul_dst_pkts: ~
              mul_dst_bytes: ~
              last_switched: ~
              first_switched: ~
              out_bytes: ~
              out_pkts: ~
              min_pkt_lngth: ~
              max_pkt_lngth: ~
              ipv6_src_addr: ~
              ipv6_dist_addr: ~
              ipv6_src_mask: ~
              ipv6_dst_mask: ~
              ipv6_flow_label: ~
              icmp_type: ~

